Fixes overflow handling in menu bar

--- a/client/src/components/Menu/Menu.css
+++ b/client/src/components/Menu/Menu.css
@@ -1,5 +1,14 @@
+.navbar {
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
 .nav-tabs {
   display: -webkit-box;
+}
+
+.navbar-light .navbar-nav .nav-link{
+  color: #007bff;
 }
 
 .menu-div {
@@ -17,6 +26,7 @@
   width: 1.5em;
   position: absolute;
   padding-left: 10px;
+  z-index: 1;
 }
 
 .scroll-button:hover {
